GS-8461 Correcting header_728x90 ad slot showing extra space in IE on perl pages

--- a/src/webapp/res/css/frame.css
+++ b/src/webapp/res/css/frame.css
@@ -63,3 +63,6 @@ body.unframed #pageGS {
     border: 1px solid #bbb;
     text-align: left;
 }
+#adLeaderboard table td.ad object{
+    diplay:none;
+}
